--- a/Index.html
+++ b/Index.html
@@ -14,17 +14,16 @@
     
     <style>
         body {
-            max-width: 800px;
+            max-width: 1032px;
             margin: 0 auto;
             padding: 20px;
             font-family: 'Nanum Gothic', sans-serif;
             line-height: 1.6;
-            background-color: #f4f4f4; /* 연한 회색 배경색 추가 */
+            background-color: #F5F5F5
         }
-        
         #content {
             background-color: #fff; /* 콘텐츠 영역 흰색 배경 */
-            padding: 20px;
+            padding: 32px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* 그림자 효과 */
         }
         code {
