--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
             padding: 20px;
             font-family: 'Nanum Gothic', sans-serif;
             line-height: 1.6;
-            background-color: #F5F5F5
+            background-color: #f5f5f5;
         }
         #content {
             background-color: #fff; /* 콘텐츠 영역 흰색 배경 */
@@ -36,6 +36,25 @@
         h1, h2, h3 {
             border-bottom: 1px solid #eaecef;
             padding-bottom: 0.3em;
+        }
+
+        /* 모바일 스타일 추가 */
+        @media (max-width: 600px) {
+            body {
+                padding: 10px; /* 모바일에서 패딩 감소 */
+            }
+            #content {
+                padding: 16px; /* 모바일에서 콘텐츠 패딩 감소 */
+            }
+            h1 {
+                font-size: 1.5em; /* 모바일에서 제목 크기 조정 */
+            }
+            h2 {
+                font-size: 1.3em; /* 모바일에서 부제목 크기 조정 */
+            }
+            h3 {
+                font-size: 1.2em; /* 모바일에서 소제목 크기 조정 */
+            }
         }
     </style>
 </head>
