--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,13 @@
             line-height: 1.6;
             background-color: #f5f5f5;
         }
+
+        #title {
+            font-size: 32px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
         #content {
             background-color: #fff; /* 콘텐츠 영역 흰색 배경 */
             padding: 32px;
@@ -59,7 +66,7 @@
     </style>
 </head>
 <body>
-    <h1>파이썬 한방에 배우기</h1>
+    <div id="title">파이썬 한방에 배우기</div>
     <div id="content"></div>
     <script>
         // 마크다운 파일 불러오기
