--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <!-- 코드 하이라이팅을 위한 highlight.js -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-    
+    <link rel="stylesheet" href="highlight.css">
     <style>
         body {
             max-width: 1032px;
@@ -35,7 +35,7 @@
         }
         code {
             font-family: 'Consolas', monospace;
-            background-color: #eee; /* 코드 블록 배경색 */
+            background: #F6F8FA; /* 코드 블록 배경색 */
             padding: 2px 5px;
             border-radius: 4px;
             border: 1px solid #ddd;
